Update POM plugins and GitHub Build script